--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "type": "module",
+  "name": "botcraft",
+  "version": "1.0.0",
+  "license": "ISC",
   "dependencies": {
     "bedrock-protocol": "^3.48.0",
     "dotenv": "^17.2.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "axios": "^0.21.4",
+    "prismarine-auth": "^2.7.0",
+    "prismarine-nbt": "^2.7.0",
+    "prismarine-realms": "^1.3.2"
   },
-  "name": "minecraft_ai_server_js",
-  "version": "1.0.0",
-  "main": "mc_ai_proxy.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "typescript": "^4.9.5",
+    "debug": "^4.3.3"
+  }
 }
