--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "botcraft",
   "version": "1.0.0",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "bedrock-protocol": "^3.48.0",
     "dotenv": "^17.2.1",
