--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^0.21.4",
     "bedrock-protocol": "^3.48.0",
+    "discord.js": "^14.21.0",
     "dotenv": "^17.2.1",
     "node-fetch": "^3.3.2",
-    "axios": "^0.21.4",
     "prismarine-auth": "^2.7.0",
     "prismarine-nbt": "^2.7.0",
     "prismarine-realms": "^1.3.2"
   },
   "devDependencies": {
-    "typescript": "^4.9.5",
-    "debug": "^4.3.3"
+    "debug": "^4.3.3",
+    "typescript": "^4.9.5"
   }
 }
