--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,60 @@
+# docker-compose.yml（1ファイル運用）
 version: "3.9"
 
 x-app: &app
   build:
     context: .
     dockerfile: Dockerfile
-  image: botcraft:dev
+  image: ${IMAGE_NS:-local}/bot:${BOT_TAG:-dev} # ← 同じタグでbuild/pull両対応
   working_dir: /usr/src/app
-  env_file:
-    - .env
+  env_file: [.env]
   volumes:
-    - .:/usr/src/app # コードをマウント（保存→即反映）
-    - node_modules:/usr/src/app/node_modules # node_modules はコンテナ側に確保
+    - .:/usr/src/app
+    - node_modules:/usr/src/app/node_modules
   restart: unless-stopped
+  logging:
+    driver: json-file
+    options: { max-size: "8m", max-file: "3" }
 
 services:
   ai-bot:
     <<: *app
     container_name: ai-bot
-    env_file:
-      - .env.ai-bot
+    env_file: [.env.ai-bot]
     command: ["node", "ai-bot.js"]
+    mem_limit: 160m
+    cpus: "0.6"
+    healthcheck:
+      test: ["CMD-SHELL", "node -e 'process.exit(0)'"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
 
   discord-bot:
     <<: *app
     container_name: discord-bot
-    env_file:
-      - .env.discord-bot
+    env_file: [.env.discord-bot]
     command: ["node", "discord-bot.js"]
+    mem_limit: 160m
+    cpus: "0.6"
+    healthcheck:
+      test: ["CMD-SHELL", "node -e 'process.exit(0)'"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
 
   dozzle:
     image: amir20/dozzle:latest
     container_name: dozzle
     restart: unless-stopped
-    ports:
-      - "80:8080"
+    ports: ["8888:8080"] # 80は競合しやすいので避ける
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    mem_limit: 96m
+    cpus: "0.3"
+    logging:
+      driver: json-file
+      options: { max-size: "4m", max-file: "3" }
 
 volumes:
   node_modules:
